<resources>
    <string name="app_name">Nilai Mahasiswa</string>
    <string name="intro">MOBPRO 45 - 02</string>
    <string name="gambar">Gambar</string>
    <string name="nama">Nama Mahasiswa</string>
    <string name="kehadiran">Nilai Kehadiran</string>
    <string name="tugas">Nilai Tugas</string>
    <string name="asesmen">Nilai Asesmen</string>
    <string name="button">HITUNG</string>
    <string name="nilaiAkhir">Nilai Akhir: %1$.2f</string>
    <string name="nilaiHuruf">Nilai Huruf: %1$s</string>
    <string name="reset">Reset</string>
    <string name="nilai_a">Menjaga Nilai Tetap Baik</string>
    <string name="nilai_b">Menjaga Dan Meningkat Nilai Sedikit Lebih Tinggi</string>
    <string name="nilai_c">Meningkatkan Nilai</string>
    <string name="nilai_d">Meningkatkan Nilai Lebih Tinggi</string>
    <string name="nilai_e">Meningkatan Nilai Jauh Lebih Tinggi</string>
    <string name="lihat_saran">Lihat Saran</string>
    <string name="saran_a">Pertahankan semangat belajar anda stabilkan selalu!</string>
    <string name="saran_b">Pertahankan semangat belajar anda saat ini dan tingkatkan sedikit lagi untuk nilai lebih baik!</string>
    <string name="saran_c">Cobalah untuk tingkatkan semangat belajar anda, walau bisa dikatakan cukup namun manusia tidak pernah merasa cukup. Semangat!</string>
    <string name="saran_d">Tingkatkan semangat belajar anda, cobalah dengan metode yang membuat anda nyaman dan bisa meningkatkan semangat belajar anda!</string>
    <string name="saran_e">Tingkatkan jauh lebih tinggi lagi semangat belajar anda! Ingat tujuan mengapa anda ingin berkuliah. Dan cobalah metode belajar lain</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="daftar_orang">Daftar Orang Terpintar</string>
    <string name="copyright">Nilai Mahasiswa merupakan sebuah aplikasi Android untuk
menghitung Nilai Mahasiswa sehingga seseorang dapat mengetahui berapakah jumlah rata-rata atau hasil nilai akhir mahasiswa tersebut.\n\nAplikasi ini dibuat untuk Assessment 1 dan 2 Mobpro. Temukan kodenya di https://github.com/Dwisyifanh9113/Assessment1Mobpro.git\n\nCopyright © 2023 Dwi Syifa Novia Herdiyanti.\nAll rights reserved.</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template"> Nama: %1$s \n%2$s \n%3$s</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hasil_x">Nilai: %1$.2f - %2$s</string>
    <string name="data_x">Nama: %1$s - Kehadiran: %2$.1f - Nilai Tugas: %3$.1f \nNilai Asesmen: %4$.1f</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="koneksi_error">Koneksi error</string>
    <string name="message">%1$s diklik!</string>
    <string name="nama_orang">Nama orang</string>
    <string name="nilai_orang">nilai IQ orang</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data orang otomatis</string>
    <string name="notif_title">Ada daftar orang terpintar baru!</string>
    <string name="notif_text">Cari tau siapa dia!</string>
</resources>